<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linerlayout_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textvie_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/helveticalight"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error_dialoge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/first_name_title_text"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signup_user_last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/last_name_title_text"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />


        <EditText
            android:id="@+id/signup_confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signup_mobilenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/mobile_number_title_text"
            android:inputType="phone"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signup_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:background="@drawable/button_round_corner"
            android:fontFamily="@font/helveticamedium"
            android:padding="15.0dip"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="#ffffffff" />

        <LinearLayout
            android:id="@+id/signup_go_to_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:fontFamily="@font/helveticalight"
                android:gravity="center"
                android:text="@string/already_account"
                android:textColor="#ff000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:fontFamily="@font/helveticamedium"
                android:text="@string/sign_in"
                android:textColor="#2FD602"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>