<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/nav_home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_home_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/home"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/home_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView_profile"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_person"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/profile_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_wish_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/navigation_wishlist"
                android:layout_width="22dp"
                android:layout_height="29dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/wishlist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/text_wishlist"
                android:textColor="@color/grey"
                android:text="@string/wishlist_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_order_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:id="@+id/imageView_order"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/my_order"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/order_history_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/aboutUs"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/about"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/about_us_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_language_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/language"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_language"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/change_language_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_share_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/shareApp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/share"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/share_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_help_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/help_imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/help"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/help_title_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/address"
                android:id="@+id/address_imageView"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="Address"
                android:id="@+id/address_textView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_sign_out_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/sign_out"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/signout"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="Signout" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>