<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.activity.SearchActivity">

    <LinearLayout
        android:id="@+id/search_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.NoActionBar"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbar_clr"
                android:theme="@style/AppTheme.NoActionBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/imageButton_search_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_chevron_left_black_24dp" />

                    <TextView
                        android:id="@+id/search_hraderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/helveticalight"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/search"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ru.nikartm.support.ImageBadgeView
                        android:id="@+id/imageView_search_cart"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:ibv_badgeValue="0"
                        app:ibv_badgeTextSize="9sp"
                        app:ibv_fixedBadgeRadius="10dp"
                        app:ibv_badgeTextStyle="bold"
                        app:ibv_badgeTextColor="#ffffff"
                        app:ibv_badgeColor="@color/red"
                        app:ibv_badgeLimitValue="true"
                        android:src="@drawable/ic_action_cart" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytSearchview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/background_search"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar_layout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_action_search" />

        <EditText
            android:id="@+id/searchview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="4dp"
            android:fontFamily="@font/helveticalight"
            android:hint="@string/search_products_title_text"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/lytSearchview"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:clipToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytSearchview" />

    <TextView
        android:id="@+id/search_no_result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data_found_title_text"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>